Beginnings of enabling extensions

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     
     <modules>
         <module>job-language</module>
+        <module>job-output</module>
     </modules>
     
     <properties>
