Now use the new ConfigurationService in opendata. Core shell application now working and accepting jobs via rabbit.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /job-language/src/main/example/
 /job-language/target/
 /job-output/target/
+/job-config/target/
+/job-commons/target/
+/job-shell/target/
