--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,10 @@
     </description>
     
     <modules>
+        <module>job-commons</module>
         <module>job-language</module>
         <module>job-output</module>
+        <module>job-shell</module>
     </modules>
     
     <properties>
