--- a/job-output/pom.xml
+++ b/job-output/pom.xml
@@ -23,7 +23,12 @@
             <artifactId>metainf-services</artifactId>
             <version>1.5</version>
         </dependency>
-        
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
 </project>
