--- a/job-shell/pom.xml
+++ b/job-shell/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>job-output</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>uk.trainwatch.job</groupId>
+            <artifactId>job-postgresql</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         
         <dependency>
             <groupId>uk.trainwatch</groupId>
