Add basic arithmetic support for BigInteger & BigDecimal

--- a/job-language/pom.xml
+++ b/job-language/pom.xml
@@ -69,6 +69,19 @@
     </build>
     
     <dependencies>
+        
+        <!-- JSR353 Java API for JSON processing - needed to support JsonValue decoding -->
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
