--- a/job-shell/pom.xml
+++ b/job-shell/pom.xml
@@ -33,6 +33,12 @@
         
         <dependency>
             <groupId>uk.trainwatch.job</groupId>
+            <artifactId>job-io</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>uk.trainwatch.job</groupId>
             <artifactId>job-output</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -43,6 +49,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         
+        <dependency>
+            <groupId>uk.trainwatch.job</groupId>
+            <artifactId>job-transform</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>uk.trainwatch</groupId>
             <artifactId>opendata-core</artifactId>
