--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     
     <modules>
         <module>job-commons</module>
+        <module>job-io</module>
         <module>job-language</module>
         <module>job-output</module>
         <module>job-shell</module>
