--- a/job-io/pom.xml
+++ b/job-io/pom.xml
@@ -35,6 +35,30 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         
+        <!-- java mail -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.4</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.activation</groupId>
+                    <artifactId>activation</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.5.4</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.activation</groupId>
+                    <artifactId>activation</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        
         <!-- JSR353 Java API for JSON processing - not yet in the JDK -->
         <dependency>
             <groupId>javax.json</groupId>
