--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>job-io</module>
         <module>job-language</module>
         <module>job-output</module>
+        <module>job-os</module>
         <module>job-shell</module>
         <module>job-schedule</module>
         <module>job-sql</module>
