JCL now supporting parsing of scripts when combined

--- a/job-jcl/pom.xml
+++ b/job-jcl/pom.xml
@@ -98,6 +98,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
+        <dependency>
+            <groupId>uk.trainwatch</groupId>
+            <artifactId>opendata-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     
 </project>
