--- a/job-language/pom.xml
+++ b/job-language/pom.xml
@@ -98,6 +98,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>job-jcl</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     
 </project>
