--- a/job-cluster/pom.xml
+++ b/job-cluster/pom.xml
@@ -49,6 +49,11 @@
         
         <!-- Servlet api -->
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>job-jcl</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
