--- a/job-cluster/pom.xml
+++ b/job-cluster/pom.xml
@@ -35,6 +35,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         
+        <dependency>
+            <groupId>onl.area51.filesystem</groupId>
+            <artifactId>filesystem-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        
         <!-- JSR353 Java API for JSON processing - not yet in the JDK -->
         <dependency>
             <groupId>javax.json</groupId>
