--- a/job-commons/pom.xml
+++ b/job-commons/pom.xml
@@ -31,6 +31,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         
+        <dependency>
+            <groupId>uk.trainwatch</groupId>
+            <artifactId>opendata-config</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        
         <!-- CDI -->
         <dependency>
             <groupId>javax.enterprise</groupId>
