--- a/job-io/pom.xml
+++ b/job-io/pom.xml
@@ -34,7 +34,14 @@
             <artifactId>opendata-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        
+
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- java mail -->
         <dependency>
             <groupId>javax.mail</groupId>
