--- a/job-io/pom.xml
+++ b/job-io/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>opendata-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        
+        <dependency>
+            <groupId>uk.trainwatch</groupId>
+            <artifactId>opendata-obsolete</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>javax</groupId>
