--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>job-schedule</module>
         <module>job-sql</module>
         <module>job-transform</module>
+        <module>job-image</module>
     </modules>
     
     <properties>
