--- a/job-docker/pom.xml
+++ b/job-docker/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>uk.trainwatch.job</groupId>
-    <artifactId>job-image</artifactId>
+    <artifactId>job-docker</artifactId>
     <packaging>pom</packaging>
     
     <name>Job Docker Image</name>
@@ -35,6 +35,11 @@
         <dependency>
             <groupId>uk.trainwatch.job</groupId>
             <artifactId>job-output</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.trainwatch.job</groupId>
+            <artifactId>job-io</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
