--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>job-cluster</module>
         <module>job-commons</module>
+        <module>job-docker</module>
         <module>job-io</module>
         <module>job-jcl</module>
         <module>job-language</module>
@@ -23,7 +24,6 @@
         <module>job-schedule</module>
         <module>job-sql</module>
         <module>job-transform</module>
-        <module>job-image</module>
     </modules>
     
     <properties>
