--- a/job-cluster/pom.xml
+++ b/job-cluster/pom.xml
@@ -18,6 +18,24 @@
     <dependencies>
         
         <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>uk.trainwatch</groupId>
+            <artifactId>opendata-scheduler</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>onl.area51.kernel</groupId>
+            <artifactId>kernel-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
             <groupId>uk.trainwatch.job</groupId>
             <artifactId>job-language</artifactId>
             <version>1.0-SNAPSHOT</version>
