--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,9 @@
         <module>job-cluster</module>
         <module>job-commons</module>
         <module>job-controller</module>
+        <!-- Disabled
         <module>job-docker</module>
+        -->
         <module>job-io</module>
         <module>job-jcl</module>
         <module>job-language</module>
@@ -32,4 +34,18 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>Area51 Releases</name>
+            <url>https://nexus.area51.onl/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>Area51 Snapshots</name>
+            <url>https://nexus.area51.onl/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+    
 </project>
